[tool.poetry]
name = "mono_stats_bot"
version = "0.1.0"
description = "Telegram bot for mono statistics"
authors = ["Andrii Puziuk <frayandy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.16"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
